Swagger for post-controller
