# modules/api/controllers/PostController.php
@@ -10,17 +10,7 @@ use yii\web\Response;
 /**
  * Post controller for the `api` module
  */
-/**
-* @OA\Schemes(format="http")
-* @OA\SecurityScheme(
- *      securityScheme="bearerAuth",
- *      in="header",
- *      name="Authorization",
- *      type="http",
- *      scheme="bearer",
- *      bearerFormat="JWT",
-* )
-*/
+
 class PostController extends ActiveController
 {
 
@@ -35,6 +25,82 @@ class PostController extends ActiveController
  *       @OA\Response(response="200", description="Posts list"),        
  *       @OA\Response(response=401, description="Unauthorized"),
  *       @OA\Response(response=404, description="Not Found"),
+ * )
+ * 
+ * @OA\Get(
+ *     path="/web/v1/posts/{id}",
+ *     summary="Get post by ID",
+ *     description="Returns a single post",
+ *     operationId="view",
+ *     tags={"Post"},
+ *     @OA\Parameter(
+ *         description="ID of post to return",
+ *         in="path",
+ *         name="id",
+ *         required=true,
+ *         @OA\Schema(
+ *           type="integer",
+ *           format="int64"
+ *         )
+ *     ),
+ *      security={{"bearerAuth":{}}}, 
+ * 
+ *       @OA\Response(response="200", description="Posts list"),        
+ *       @OA\Response(response=401, description="Unauthorized"),
+ *       @OA\Response(response=404, description="Not Found"),
+ * )
+ * 
+ * @OA\PUT(path="/web/v1/posts/{id}", tags={"Post"},
+ *      @OA\RequestBody(
+ *          @OA\MediaType(
+ *              mediaType="application/json",
+ *              @OA\Schema(
+ *                  required={"title", "content"},
+ *                  @OA\Property(property="title", type="string"),
+ *                  @OA\Property(property="content", type="string")
+ *              )
+ *          )
+ *      ),
+ * 
+ * summary="Update post by ID",
+ * @OA\Parameter(
+ *   description="ID of post to update",
+ *   in="path",
+ *   name="id",
+ *   required=true,
+ *   @OA\Schema(
+ *     type="integer",
+ *     format="int64"
+ *   )
+ * ),
+ * security={{"bearerAuth":{}}}, 
+ * 
+ * @OA\Response(response=200, description="Successful operation"),
+ * @OA\Response(response=422, description="Unprocessable Entity"),
+ * @OA\Response(response="404",description="Post not found")
+ * )
+ * 
+ ** @OA\DELETE(
+ *     path="/web/v1/posts/{id}",
+ *     summary="Delete post by ID",
+ *     description="Delete post",
+ *     operationId="view",
+ *     tags={"Post"},
+ *     @OA\Parameter(
+ *         description="ID of post to delete",
+ *         in="path",
+ *         name="id",
+ *         required=true,
+ *         @OA\Schema(
+ *           type="integer",
+ *           format="int64"
+ *         )
+ *     ),
+ * security={{"bearerAuth":{}}}, 
+ * 
+ * @OA\Response(response=204, description="No Content"),
+ * @OA\Response(response=422, description="Unprocessable Entity"),
+ * @OA\Response(response="404",description="Post not found")
  * )
  */
     public $modelClass = 'app\models\Post';
